--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ header {
     padding: 120px;
 }
 
+h2 {
+    font-weight: lighter;
+    font-size: 14px;
+    text-align: left;
+    margin: 5px 185px;
+
+}
+
 footer a {
 
     text-decoration: none;
