--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,60 @@
 body,
-footer {
+h1 {
     text-align: center;
-    background-color: antiquewhite;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 header {
-    text-align: center;
+    text-align: left;
     max-width: 600px;
-    border: 1px solid brown;
-    border-radius: 30px;
-    margin: 90px auto;
-    padding: 120px;
+    margin: 8px auto;
+    padding: 10px;
+}
+
+header form {
+    background-color: rgb(34, 58, 34);
+    border-left: 8px solid rgb(207, 242, 206);
+    margin: 30px auto;
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px 0px rgb(119, 117, 117);
+
 }
 
 h2 {
-    font-weight: lighter;
+    background-color: rgb(207, 242, 206);
+    border-left: 8px solid rgb(34, 58, 34);
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px 0px rgb(186, 249, 228);
+    padding: 30px;
     font-size: 14px;
-    text-align: left;
-    margin: 5px 185px;
+}
 
+footer {
+    text-align: center;
+    font-size: 13px;
 }
 
 footer a {
-
     text-decoration: none;
-    color: green;
+    color: rgb(3, 109, 3);
+}
+
+.boxInput {
+    width: 75%;
+    font-size: 15px;
+    padding: 10px;
+    margin-right: 5px;
+    border-radius: 15px;
+    border: none;
+}
+
+.submitButton {
+    width: 90px;
+    padding: 10px;
+    font-size: 15px;
+    background-color: rgb(3, 109, 3);
+    color: white;
+    border-radius: 15px;
+    border: none;
 }
