--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,14 @@ header form {
 
 }
 
-h2 {
+.pose {
     background-color: rgb(207, 242, 206);
     border-left: 8px solid rgb(34, 58, 34);
     border-radius: 10px;
     box-shadow: 0px 4px 20px 0px rgb(186, 249, 228);
     padding: 30px;
-    font-size: 14px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 footer {
