--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-body,
-h1 {
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
@@ -11,14 +9,34 @@ header {
     padding: 10px;
 }
 
-header form {
+h1 {
+    font-size: 30px;
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+    font-size: 12px;
+}
+
+footer a {
+    color: rgb(3, 109, 3);
+}
+
+.formContainer {
     background-color: rgb(34, 58, 34);
     border-left: 8px solid rgb(207, 242, 206);
-    margin: 30px auto;
+    margin: 46px 0;
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0px 4px 20px 0px rgb(119, 117, 117);
+}
 
+.suggestion {
+    color: white;
+    font-size: 12px;
+    opacity: 50%;
+    line-height: 3;
 }
 
 .pose {
@@ -27,25 +45,22 @@ header form {
     border-radius: 10px;
     box-shadow: 0px 4px 20px 0px rgb(186, 249, 228);
     padding: 30px;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.5;
+
 }
 
-
-
-footer {
-    text-align: center;
-    font-size: 13px;
+.hidden {
+    display: none;
 }
 
-footer a {
-    text-decoration: none;
-    color: rgb(3, 109, 3);
+.pose strong {
+    color: blue;
 }
 
 .boxInput {
     width: 75%;
-    font-size: 15px;
+    font-size: 20px;
     padding: 10px;
     margin-right: 5px;
     border-radius: 15px;
@@ -55,9 +70,25 @@ footer a {
 .submitButton {
     width: 90px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     background-color: rgb(3, 109, 3);
     color: white;
     border-radius: 15px;
     border: none;
+}
+
+.generating {
+    animation: blink-animation 2s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
 }
