--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ header {
 }
 
 h1 {
-    font-size: 30px;
+    font-family: sans-serif;
+    font-size: 40px;
     text-align: center;
 }
 
@@ -20,7 +21,7 @@ footer {
 }
 
 footer a {
-    color: rgb(3, 109, 3);
+    color: rgb(5, 88, 5);
 }
 
 .formContainer {
@@ -45,7 +46,7 @@ footer a {
     border-radius: 10px;
     box-shadow: 0px 4px 20px 0px rgb(186, 249, 228);
     padding: 30px;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 1.5;
 
 }
